Project image hover overlay, project title-to-picture spacing fixed

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -23,6 +23,33 @@
   margin-top: 100vh;
 }
 
+.overlay {
+  position: relative;
+}
+
+.overlay:after {
+  position: absolute;
+  content: "";
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  opacity: 0;
+  transition: opacity 0.4s ease 0s;
+}
+
+.overlay:hover:after {
+  opacity: 0.5;
+}
+
+.black:after {
+  background: rgba(0, 0, 0, 0.2);
+}
+
+a.texting:hover {
+  color: #787878;
+}
+
 /*Copy email*/
 .mailto-wrapper {
   position: relative;
@@ -3478,11 +3505,11 @@ body.is-touch #banner {
 h3 {
   display: block;
   font-size: 1.17em;
-  margin-block-start: 1em;
-  margin-block-end: 1em;
-  margin-inline-start: 0px;
-  margin-inline-end: 0px;
-  font-weight: bold;
+  /* margin-block-start: 1em; */
+  /* margin-block-end: 1em; */
+  /* margin-inline-start: 0px; */
+  /* margin-inline-end: 0px; */
+  /* font-weight: bold; here*/
 }
 
 .column,
